--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@next/eslint-plugin-next": "^16.0.3",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
     "stylelint": "^14.16.1",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
