--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
