--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
+    "prettier": "^3.6.2",
     "stylelint": "^14.16.1",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
