--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@next/eslint-plugin-next": "^16.0.3",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
