--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
