--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "classnames": "^2.5.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "next": "16.0.1",
