--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.67.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
