Install framer motion

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "framer-motion": "^12.23.25",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
